# varkit

./: CMakeLists.txt  varkit_config.h.in
lib/range-v3/: .gitignore  README.md
lib/range-v3/cmake/: GoogleBenchmark.cmake.in  GoogleTest.cmake.in
lib/range-v3/doc/: index.md  layout.xml
lib/range-v3/include/: module.modulemap
src/: CMakeLists.txt  OptionsContainer.h  VarkitExecutor.h  constants.h  main.cpp  varkit.h  varkit_config.h
src/align/: Aligner.cpp  Aligner.h
src/classify/: AbundanceEstimator.cpp  AbundanceEstimator.h  classification.cpp  classification.h  classify_scripts.h  strain_handler.cpp  strain_handler.h
src/compact_map/: compact_map.cpp  compact_map.h  compact_map_utils.h  multimap.h
src/data_structures/: data_structures.cpp  data_structures.h
src/io/: BufferedOutput.h  FFQReader.h  FFReader.h  FastaReader.cpp  FastaReader.h  FastaReader2.cpp  FastaReader2.h  FastxReader.cpp  GenomeLoader.h  MetaDataDB.cpp  MetaDataDB.h  VCFHandler.h
src/kmer_processing/: KmerIterator.cpp  KmerIterator.h  KmerProcessor.h  SimpleKmerIterator.h  SimpleKmerPutter.h  SpacedKmerIterator.cpp  SpacedKmerIterator.h
src/minimap/: minimap.h
src/modes/: build.h  classify.h  profile.h
src/taxonomy/: CustomTaxonomy.h  HitsClassifier.cpp  HitsClassifier.h  ReadClassifier.cpp  ReadClassifier.h  Taxonomy.h  TaxonomyNew.cpp  TaxonomyNew.h  Test.h  TestTaxonomy.h
src/test/: VCFTest.h  iotest.h  kmer_iterator_test.h  test.h  test2.h
src/utils/: Benchmark.h  BinaryClassifierEvaluator.h  KmerBuffer.h  KmerUtils.h  Progress.cpp  Progress.h  ShapeUtils.h  ThreadPool.h  Utils.h  queue.h  semaphore_x.h  thread_pool.h  tiny_tree.h  version.h
src/variant_predictor/: CombinationIterator.h  IOHandler.h  SNPPredictor.cpp  SNPPredictor.h  ShapeBuilder.cpp  ShapeBuilder.h  ShapeHistory.cpp  ShapeHistory.h  VariantInferer.cpp  VariantInferer.h
tests/: classification_test.cpp  ttree_test.cpp
